# email

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RRContacts.csv  docker-compose.yml  env.py  initial_description.md  manage.py  pyproject.toml  requirements.txt  style.md  test.csv
bounced/: msg1.txt  msg2.txt  msg3.txt  msg4.txt
config/: urls.py  wsgi.py
config/django/: base.py  local.py
config/settings/: celery.py
emailmarketing/: __init__.py  celery.py
emailmarketing/accounts/: admin.py  apps.py  models.py  selectors.py  services.py  urls.py  views.py
emailmarketing/accounts/migrations/: 0001_initial.py
emailmarketing/campaigns/: admin.py  apps.py  models.py  selectors.py  services.py  tasks.py  urls.py  views.py
emailmarketing/campaigns/migrations/: 0001_initial.py  0002_touches_threading_blacklist.py
templates/: base.html  home.html
templates/blacklist/: list.html
templates/campaigns/: create.html  detail.html  touch_create.html
