[project]
name = "email"
version = "0.1.0"
description = "Email marketing application with Gmail API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2,<5.0",
    "djangorestframework>=3.14",
    "celery[redis]>=5.3",
    "redis>=4.6",
    "google-auth>=2.22",
    "google-auth-oauthlib>=1.1",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.100",
    "jinja2>=3.1",
    "psycopg[binary]>=3.1",
    "django-environ>=0.11",
]
